moving forward w data cleaning. next will be functions in spreadsh + sql

--- a/notes/DB.tex
+++ b/notes/DB.tex
@@ -25,7 +25,7 @@
 \end{itemize}
 
 \subsubsection{\textit{Metadata} - Metadatos}
-Los metadatos son datos sobre datos, y permiten interpretar los contenidos de una hoja de cálculo o DB. Como parte de \gls{dtgvrnnc}, se almacenan en una ubicación central, convirtiéndose en una fuente única y verídica de información consistente y uniforme, de acceso estandarizado. Así, se asegura que los datos son exactos, precisos, relevantes y actualizados. 
+Los metadatos son datos sobre datos, y permiten interpretar los contenidos de una hoja de cálculo o DB. Como parte del \gls{dtgvrnnc}, se almacenan en una ubicación central, convirtiéndose en una fuente única y verídica de información consistente y uniforme, de acceso estandarizado. Así, se asegura que los datos son exactos, precisos, relevantes y actualizados. 
 
 \paragraph{Repositorios de \textit{Metadata}}
 Bases de datos creadas específicamente para guardar metadatos, ya sea de forma física o virtual. Permiten realizar agregaciones de datos de forma más fácil y rápida al describir aspectos como
@@ -56,7 +56,8 @@ Bases de datos creadas específicamente para guardar metadatos, ya sea de forma 
 \subsubsection{Comandos y Sintaxis SQL}
 Tomar en cuenta que existen múltiples dialectos SQL y es recomendable consultar la documentación. Sin embargo, la gran mayoría de las instrucciones son comunes, y se promueven buenas prácticas de comandos. Algunos de los dialectos SQL consisten en \textit{MySQL, BigQuery, PostgreSQL, Microsoft SQL, SQLite}
 \begin{itemize}
-    \item [*]{ : selector universal para todas las columnas}
+    \item {\textbf{*} : selector universal para todas las columnas}
+    \item {\textbf{Null} : Indicador de valores no existentes en un set de datos. \textit{null ${\neq}$ 0}}
 \end{itemize}
 
 \paragraph{Cláusulas}
