--- a/notes/ask.tex
+++ b/notes/ask.tex
@@ -61,9 +61,10 @@ Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equi
     \item {\textbf{Equipo Orientado al Cliente} : Cualquier persona en la organización que tenga algún nivel de interacción con clientes, actuales y potenciales}
     \item {\textbf{Equipo Ciencia de Datos} : 
     \begin{description}
-        \item[Analista de Datos]{: Recolección, transformación y organización de datos, con tal de realizar conclusiones, predicciones y decisiones basadas en hechos}
-        \item[Ingeniero de Datos]{ : Procesa los datos iniciales para crear un proceso viable. Generalmente es el encargado de prepararlos para los analistas y científicos}
-        \item[Científico de Datos]{ : Creación de modelos y exploración de lo desconocido usando datos sin editar, para encontrar preguntas y problemas nuevos}
+        \item [Analista de Datos]{: Recolección, transformación y organización de datos, con tal de realizar conclusiones, predicciones y decisiones basadas en hechos}
+        \item [Ingeniero de Datos]{ : Procesamiento de datos iniciales para crear un proceso viable, al darles un formato útil para el análisis. Generalmente es el encargado de prepararlos para los analistas y científicos}
+        \item [Científico de Datos]{ : Creación de modelos y exploración de lo desconocido usando datos sin editar, para encontrar preguntas y problemas nuevos}
+        \item [Especialistas de Depósitos de Datos]{ : Desarrollo de procesos y procedimientos para guardar y organizar datos de forma efectiva}
     \end{description}}
 \end{itemize}
 
