--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -39,19 +39,19 @@
 \newglossaryentry{stkhldrs}{
     name = \textit{Stakeholders},
     sort = {stakeholders},
-    description = {\textit{Interesados}, personas que invierten tiempo y recursos en el proyecto, y que les interesa el resultado final. El tipo \textbf{Primario} tiene relación directa con el proyecto y se verá afectado por su resultado, como \textit{directivos y gerentes}. El tipo \textbf{Secundario} también se verá afectado, pero no posee intereses directos como \textit{empresas externas}}
+    description = {\textit{Interesados}. Personas que invierten tiempo y recursos en el proyecto, y que les interesa el resultado final. El tipo \textbf{Primario} tiene relación directa con el proyecto y se verá afectado por su resultado, como \textit{directivos y gerentes}. El tipo \textbf{Secundario} también se verá afectado, pero no posee intereses directos como \textit{empresas externas}}
 }
 
 \newglossaryentry{prblmdmn}{
-    name = \textit{Problem Domain} - Dominio del Problema, 
+    name = \textit{Problem Domain}, 
     sort = {problem}, 
-    description = {Área de análisis específico que abarca cada actividad que afecta o es afectada por el problema}
+    description = {\textit{Dominio del Problema}. Área de análisis específico que abarca cada actividad que afecta o es afectada por el problema}
 }
 
 \newglossaryentry{strctrdthnkng}{
-    name = \textit{Structured Thinking} - Pensamiento Estructurado,
+    name = \textit{Structured Thinking},
     sort = {structured}, 
-    description = {Proceso en el que se reconoce el problema o situación, y se organiza la información disponible para revelar deficiencias, oportunidades y opciones}
+    description = {\textit{Pensamiento Estructurado}. Proceso en el que se reconoce el problema o situación, y se organiza la información disponible para revelar deficiencias, oportunidades y opciones}
 }
 
 \newglossaryentry{pplanlss}{
@@ -85,45 +85,15 @@
 }
 
 \newglossaryentry{gpnlss}{
-    name = \textit{Gap Analysis} - Análisis de Déficit,
+    name = \textit{Gap Analysis},
     sort = {analisis deficit},
-    description = {Método de evaluación y examinación de un proceso y cómo funciona actualmente, en contraste con la meta y estado ideal}
-}
-
-\newglossaryentry{bias}{
-    name = Sesgo,
-    sort = {sesgo},
-    description = {Preferencia, a favor o en contra, subconsciente o no, respecto a una persona, grupo de personas o cosas. Algunos ejemplos incluyen 
-    \begin{itemize}
-        \item {\textbf{\textit{Sampling Bias} - Sesgo de Muestreo} : cuando una muestra no es representativa de la población}
-        \item {\textbf{\textit{Observer Bias} - Sesgo del Observador} : también llamado \textbf{del Investigador}, cuando dos personas tienden a observar cosas de forma distinta}
-        \item{\textbf{\textit{Interpretation Bias} - Sesgo de Interpretación} : tendencia a interpretar situaciones de forma positiva o negativa}
-        \item {\textbf{\textit{Confirmation Bias} - Sesgo de Confirmación} : tendencia a buscar o interpretar información de tal forma que confirma suposiciones preexistentes}
-    \end{itemize}}
-}
-
-\newglossaryentry{dtbs}{
-    name = Sesgo de Datos,
-    sort = {sesgo datos},
-    description = {Tipo de error que sistemáticamente distorsiona los resultados hacia cierta dirección}
-}
-
-\newglossaryentry{ppltn}{
-    name = Población,
-    sort = {poblacion},
-    description = {Todos los valores posibles en un set de datos}
-}
-
-\newglossaryentry{smpl}{
-    name = Muestra,
-    sort = {muestra},
-    description = {Parte de una población, y que es representativa de la misma}
+    description = {\textit{Análisis de Déficit}. Método de evaluación y examinación de un proceso y cómo funciona actualmente, en contraste con la meta y estado ideal}
 }
 
 \newglossaryentry{datatype}{
     name = \textit{Data Type},
     sort = {data type},
-    description = {Descripción del tipo de valor que cierto atributo posee. \textit{Ejemplos : number, str/text ( secuencias de carácteres y puntuación con información textual), bool (verdadero o falso en base a condiciones lógicas)}}
+    description = {\textit{Tipo de Dato}. Descripción del tipo de valor que cierto atributo posee. \textit{Ejemplos : number, string/text (secuencias de carácteres y puntuación con información textual), bool (verdadero o falso en base a condiciones lógicas)}}
 }
 
 \newglossaryentry{ethcs}{
@@ -133,15 +103,15 @@
 }
 
 \newglossaryentry{qry}{
-    name = \textit{Query} - Consulta,
+    name = \textit{Query},
     sort = {query},
-    description = {Petición a una DB para obtener y manipular datos}
+    description = {\textit{Consulta}. Petición a una DB para obtener y manipular datos}
 }
 
 \newglossaryentry{dtgvrnnc}{
-    name = \textit{Data Governance} - Gobernanza de Datos,
+    name = \textit{Data Governance},
     sort = {data governance},
-    description = {Proceso para asegurar el manejo formal de los activos de datos de una compañía}
+    description = {\textit{Gobernanza de Datos}. Proceso para asegurar el manejo formal de los activos de datos de una compañía}
 }
 
 \newglossaryentry{csv}{
@@ -151,9 +121,15 @@
 }
 
 \newglossaryentry{rgx}{
-    name = \textit{Regex} - Expresión Regular,
+    name = \textit{Regex},
     sort = {regex},
-    description = {Secuencia de caracteres que especifica un patrón, combinación o formato a seguir por un string}
+    description = {\textit{Expresión Regular}. Secuencia de caracteres que especifica un patrón, combinación o formato a seguir por un string}
+}
+
+\newglossaryentry{ntwrkng}{
+    name = \textit{Networking},
+    sort = {networking},
+    description = {Creación de lazos profesionales con colegas, potenciales jefes o empresas de interés}
 }
 
 \glsaddallunused
