--- a/notes/main.tex
+++ b/notes/main.tex
@@ -63,9 +63,11 @@
 \input{class}
 \input{ciclo_datos}
 \input{destrezas}
-\input{herramientas}
+\input{statistics}
+\input{tools}
 \input{ask}
 \input{prepare}
+\input{process}
 \input{fases_add}
 \input{otros_f_add}
 %\input{example} Ejemplo, se puede borrar
