--- a/notes/tools.tex
+++ b/notes/tools.tex
@@ -3,6 +3,7 @@
 \input{DB}
 
 \subsection{\textit{Spreadsheets vs Databases}}
+Considerar que para ambos, \textbf{Campo} corresponde a las columnas, y \textbf{Registro} a las filas. En un registro se contienen múltiples campos, o sea: un set de datos puede tener múltiples valores.
 \begin{table}
     \centering
     \begin{tabular}{|p{3.5cm}|p{5.5cm}|p{5.5cm}|}
