in the middle of U3

--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -18,6 +18,12 @@
     description = {Conjunto de instrucciones para un cálculo específico, usando los datos disponibles. \textit{Ejemplos : Promedio, Error, Desviación Estándar}}
 }
 
+\newglossaryentry{fnctn}{
+    name = Función,
+    sort = {función},
+    description = {Grupo de instrucciones que lleva a cabo un cálculo en específico utilizando datos}
+}
+
 \newglossaryentry{oprtr}{
     name = Operador,
     sort = {operador},
@@ -90,10 +96,16 @@
     description = {\textit{Análisis de Déficit}. Método de evaluación y examinación de un proceso y cómo funciona actualmente, en contraste con la meta y estado ideal}
 }
 
+\newglossaryentry{str}{
+    name = \textit{String},
+    sort = {string},
+    description = {\textit{Text String o Cadena de Texto}. Secuencia de caracteres y puntuación dentro de una celda con información textual, compuestos mayormente por letras}
+}
+
 \newglossaryentry{datatype}{
     name = \textit{Data Type},
     sort = {data type},
-    description = {\textit{Tipo de Dato}. Descripción del tipo de valor que cierto atributo posee. \textit{Ejemplos : number, string/text (secuencias de carácteres y puntuación con información textual), bool (verdadero o falso en base a condiciones lógicas)}}
+    description = {\textit{Tipo de Dato}. Descripción del tipo de valor que cierto atributo posee. \textit{Ejemplos : number, string, bool (verdadero o falso en base a condiciones lógicas)}}
 }
 
 \newglossaryentry{ethcs}{
@@ -131,5 +143,18 @@
     sort = {networking},
     description = {Creación de lazos profesionales con colegas, potenciales jefes o empresas de interés}
 }
+
+\newglossaryentry{mrgr}{
+    name = \textit{Merger},
+    sort = {merger},
+    description = {\textit{Fusión}. Acuerdo entre dos organizaciones para unirse legalmente entre si}
+}
+
+\newglossaryentry{syntx}{
+    name = \textit{Syntax},
+    sort = {syntax},
+    description = {\textit{Sintaxis}. Estructura predeterminada que incluye toda la información requerida, junto con su ubicación correcta}
+}
+
 
 \glsaddallunused
